# Forex_bot

./: .replit  README.md  build.sh  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  start_django.sh  start_server.sh  start_trading.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
attached_assets/: Pasted-127-0-0-1-16-Dec-2025-13-35-05-0000-HEAD-HTTP-1-1-200-0_1765892170846.txt  Pasted-USE-CAPITAL-COM-i-have-the-API-keys-for-now-we-will-trade-the-Demo-account-with-a-balance-of-1000-1764054068921_1764054068922.txt  Pasted-WHAT-S-MISSING-LIMITATIONS-You-are-missing-3-critical-components-that-every-profitable-AI-trading-1764311391559_1764311391560.txt  Pasted-class-CapitalService-Capital-com-CFD-Trading-API-Service-def-init-self-u-1764059768734_1764059768734.txt  Pasted-import-os-import-requests-import-logging-from-datetime-import-datetime-timedelta-from-typing-im-1764059759511_1764059759511.txt
backend/: db.sqlite3  manage.py  requirements.txt  run.py  start.sh
backend/api/: __init__.py  admin.py  apps.py  capital_api.py  ml_engine.py  models.py  scheduler.py  serializers.py  technical_analysis.py  trading_engine.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_mlmodel_pair.py
backend/static/: index.html
backend/static/assets/: index-CD6dOBAR.js
backend/trading_ai/: __init__.py  settings.py  urls.py  wsgi.py
client/src/: index.css
server/: app.ts  index-dev.ts  routes.ts
src/: App.tsx  index.css
src/lib/: queryClient.ts
src/pages/: analytics.tsx  dashboard.tsx  register.tsx
(+10 files in other folders)
